	- Fixed issue where text containing - in middle of words will parse as flags.
		This will no longer do that and it will be part of argument.
		Flags must have a space before the '-'
0.1.10:
	- Added getMasterReloader function to NoxPlugin
		Simpler way to get master reloader for core.
			WARNING THIS MUST NOT BE OVERRIDEN EXCEPT IN CORE
0.1.10.2:
	- Fixed Locales for Chat Pings.
0.1.11:
	- Fixed double save on kick resulting in
		DELETION OF ALL PLAYER DATA HAHA... 
			not really funny. 
0.2.0:
	=== API ===
	- Implemented remote data save event execution.
	- Added reloader for players data.
			but hell that explains why I could not figure out how that broke...
	- Added json utils. 
		*HINT HINT* using new raw message stuff in minecraft.
			Something to do with chat.
	- Added static cleaning utils.
		This will put a step forward to being able to use bukkits /reload command. 
			Other plugins are not very compatible with it at moment. So this won't work for a while.
	- Added Towny Integration and utils.
	- Added effects stuff.
	- Added static effects utils.
	- Added top secret gui effect. (Later to come through NoxMMO)
	- Much more but lost track.
	- Proxified the Player data system.
	=== Features ===
	- Fixed chat format for ping system.
	- Made save and load functions on NoxPlayer synchronized
0.2.1:
	- Reintroduced the save event system due to complex bug.
		Using this as a temporary fix until the main system works again. (This was the original working system)
0.2.2:
	- Removed and deprecated old event save system.
		Now uses a dynamic save manager through core player manager. 
			Uses all managers from other nox plugins to save data. BEFORE writing to file..
	- Added some data cloning code to prevent possible data loss on updating player file locations.
	- Added /Nox command
		Has a upgrade sub command but not implemented.
	- Fixed command NPE's
0.2.4:
	- Fixed empty colors on last color util.
		This will prevent color leakage on certain stuff in our plugins.