@@ -53,3 +53,6 @@
 0.2.4:
 	- Fixed empty colors on last color util.
 		This will prevent color leakage on certain stuff in our plugins.
+    - Compressed UUID data storage internally.
+        Data file names remain the same.
+        The reduced memory usage is all this is.
